fixed centering on btc animations on smaller screens

--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -101,6 +101,8 @@
   .btc-animation {
     display: block !important;
     position: static;
+
+    padding-right: 2.5rem;
   }
 }
 
